[package]
name = "ggbar"
version = "0.1.0"
authors = ["Lukas Tobler <lukas@tobler.dev>"]
edition = "2018"

[dependencies]
cairo-rs = { version = "0.8.1", features = ["xcb"] }
cairo-sys-rs = "0.9.2"
pango = "0.8.0"
pangocairo = "0.9.0"
xcb = { version = "0.9", features = ["shm"] }
chrono = "0.4.11"
libc = "0.2.71"
